Closed
Bug 1963128
Opened 17 days ago
Closed 16 days ago
[ews] Error during sync when creating a folder that already exists
Categories
(Thunderbird :: Account Manager, defect)
Thunderbird
Account Manager
Tracking
(Not tracked)
RESOLVED
FIXED
140 Branch
People
(Reporter: edicharry, Assigned: edicharry)
Details
Attachments
(1 file)
When processing a message from EWS to create a folder that already exists, we get a debug assertion failure caused by an unrecognized error code.
Internally, the code that creates the folder in the local store to return NS_MSG_FOLDER_EXISTS. We use NS_ENSURE_SUCCESS to check return values in the current create folder implementation on the EwsIncomingServer side. However, it looks like NS_ENSURE_SUCCESS ends up triggering a debug assertion when it get NS_MSG_FOLDER_EXISTS because NS_MSG_FOLDER_EXISTS isn't a recognized error code from the autogenerated ErrorList.h.
Assignee | ||
Updated•17 days ago
|
Assignee: nobody → edicharry
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•17 days ago
|
||
Steps to reproduce:
- Use a build with debug assertions enabled.
- Create a folder on an EWS server using Thunderbird.
- Trigger a sync and note the crash.
Assignee | ||
Comment 2•17 days ago
|
||
Assignee | ||
Updated•16 days ago
|
Keywords: checkin-needed-tb
Pushed by arschmitz@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/3ada9c3b58ff
Check for existing EWS ID prior to folder creation.r=babolivier
Updated•13 days ago
|
Target Milestone: --- → 140 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•