Bug 1963128 - Check for existing EWS ID prior to folder creation.r=babolivier

Differential Revision: https://phabricator.services.mozilla.com/D246978

--HG--
extra : amend_source : 12a78b3f6a506876638348d52a2bf798dad18214